--- a/.project
+++ b/.project
@@ -16,7 +16,8 @@
 			<arguments>
 				<dictionary>
 					<key>LaunchConfigHandle</key>
-					<value>&lt;project&gt;/.externalToolBuilders/New_configuration [Builder].launch</value>
+					<value>&lt;project&gt;/.externalToolBuilders/New_configuration
+						[Builder].launch</value>
 				</dictionary>
 			</arguments>
 		</buildCommand>
